# quantumplayer-v2.1

./: CMakeLists.txt  README.md  build.bat  build.sh  download_deps.bat  download_deps.sh
.github/workflows/: build.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/dsp/: biquadfilter.h
src/network/: albumartfetcher.cpp  albumartfetcher.h  lastfmscrobbler.cpp  lastfmscrobbler.h  lyricsfetcher.cpp  lyricsfetcher.h
src/player/: audioengine.cpp  audioengine.h  audioplayer.cpp  audioplayer.h  miniaudio_impl.cpp  replaygain.cpp  replaygain.h
src/resources/: resources.qrc
src/ui/: clickableslider.h  equalizerwidget.cpp  equalizerwidget.h  lastfmsettingsdialog.cpp  lastfmsettingsdialog.h  levelmeterswidget.cpp  levelmeterswidget.h  librarywidget.cpp  librarywidget.h  lyricswidget.cpp  lyricswidget.h  nowplayingwidget.cpp  nowplayingwidget.h  playlistwidget.cpp  playlistwidget.h  sleeptimerwidget.cpp  sleeptimerwidget.h  smartplaylistdialog.cpp  smartplaylistdialog.h  systemtrayicon.cpp  systemtrayicon.h  tageditordialog.cpp  tageditordialog.h  thememanager.cpp  thememanager.h  visualizerwidget.cpp  visualizerwidget.h  waveformwidget.cpp  waveformwidget.h
